# personal-gpt

./: Dockerfile  README.md  bun.lockb  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: AI.svelte  DeviceList.svelte  Microphone.svelte  Modal.svelte
