[package]
name = "personal-gpt"
version = "0.0.0"
description = "Personal GPT"
authors = ["David Waster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
hound = "3.5.1"
pv_recorder = "1.2.2"
async-openai = "0.20.0"
async-std = "1.12.0"
tokio = "1.37.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
